[gd_scene load_steps=7 format=3 uid="uid://cybcoo2b58d6a"]

[ext_resource type="Script" path="res://World/select_tutorials.gd" id="1_51fml"]
[ext_resource type="Theme" uid="uid://d31rns0bis8jm" path="res://Menu_Theme.tres" id="2_tbkqf"]
[ext_resource type="PackedScene" uid="uid://dwd8ry3kcc7gm" path="res://Projectiles/bubble_particles.tscn" id="3_60vhw"]
[ext_resource type="Theme" uid="uid://q2pxe47w6snq" path="res://MainMenu.tres" id="4_xvcxo"]
[ext_resource type="AudioStream" uid="uid://b5m72ix1krvl2" path="res://Assets/tutorialmusic.ogg" id="5_dhxsc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x828l"]

[node name="select_tutorials" type="CanvasLayer"]
script = ExtResource("1_51fml")

[node name="Panel" type="Panel" parent="."]
offset_right = 1000.0
offset_bottom = 720.0
theme = ExtResource("2_tbkqf")
theme_override_styles/panel = SubResource("StyleBoxEmpty_x828l")

[node name="BubbleParticles" parent="Panel" instance=ExtResource("3_60vhw")]
texture_filter = 1
position = Vector2(500, 800)
amount = 8
lifetime = 8.0
randomness = 0.0
lifetime_randomness = 0.0
emission_rect_extents = Vector2(500, 4)
spread = 3.0
gravity = Vector2(0, -10)
initial_velocity_min = 200.0
initial_velocity_max = 220.0
angular_velocity_min = 5.0
linear_accel_min = 0.0
angle_min = -180.0
angle_max = 180.0
color_ramp = null

[node name="Title" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 40.0
offset_top = 16.0
offset_right = 968.0
offset_bottom = 132.0
size_flags_vertical = 0
size_flags_stretch_ratio = 2.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_font_sizes/normal_font_size = 128
bbcode_enabled = true
text = "[center][color=dark_red]Acid[/color] [color=deepskyblue]Base[/color][/center]"

[node name="PanelContainer" type="PanelContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.0
offset_top = -84.0
offset_right = 199.0
offset_bottom = 84.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("4_xvcxo")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/PanelContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="Tutorial1" type="Button" parent="Panel/PanelContainer/HBoxContainer/VBoxContainer2"]
clip_contents = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Tutorial1"

[node name="Tutorial2" type="Button" parent="Panel/PanelContainer/HBoxContainer/VBoxContainer2"]
clip_contents = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Tutoial2"

[node name="Tutorial3" type="Button" parent="Panel/PanelContainer/HBoxContainer/VBoxContainer2"]
clip_contents = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Tutorial3"

[node name="Tutorial4" type="Button" parent="Panel/PanelContainer/HBoxContainer/VBoxContainer2"]
clip_contents = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Tutorial4"

[node name="Return to Main" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 294.0
offset_top = 568.0
offset_right = 774.0
offset_bottom = 651.0
theme = ExtResource("4_xvcxo")
theme_override_font_sizes/font_size = 32
text = "Return to Main Menu"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(147.499, 152.75)
stream = ExtResource("5_dhxsc")
autoplay = true

[connection signal="pressed" from="Panel/PanelContainer/HBoxContainer/VBoxContainer2/Tutorial1" to="." method="_on_tutorial_1_pressed"]
[connection signal="pressed" from="Panel/PanelContainer/HBoxContainer/VBoxContainer2/Tutorial2" to="." method="_on_tutorial_2_pressed"]
[connection signal="pressed" from="Panel/PanelContainer/HBoxContainer/VBoxContainer2/Tutorial3" to="." method="_on_tutorial_3_pressed"]
[connection signal="pressed" from="Panel/PanelContainer/HBoxContainer/VBoxContainer2/Tutorial4" to="." method="_on_tutorial_4_pressed"]
[connection signal="pressed" from="Panel/Return to Main" to="." method="_on_return_to_main_pressed"]
